--- a/demo/index.html
+++ b/demo/index.html
@@ -41,16 +41,8 @@
     // 2. Leave this empty ("") to use anonymous sign-in for testing.
     var __initial_auth_token = "";
 
-    // 3. SECURE FIREBASE CONFIG - Keys injected at build time
-    var __firebase_config = {
-      apiKey: "<!-- DEMO_FIREBASE_API_KEY -->",
-      authDomain: "<!-- DEMO_FIREBASE_AUTH_DOMAIN -->",
-      projectId: "<!-- DEMO_FIREBASE_PROJECT_ID -->",
-      storageBucket: "<!-- DEMO_FIREBASE_STORAGE_BUCKET -->",
-      messagingSenderId: "<!-- DEMO_FIREBASE_MESSAGING_SENDER_ID -->",
-      appId: "<!-- DEMO_FIREBASE_APP_ID -->",
-      measurementId: "<!-- DEMO_FIREBASE_MEASUREMENT_ID -->"
-    };
+    // Firebase config will be injected at build time
+    var __firebase_config = null;
 // Function for Dart to call to get the app ID
     function getAppId() {
       console.log("JS: getAppId called, returning:", __app_id); // Debug log
@@ -59,7 +51,32 @@
 
     // Function for Dart to call to get the Firebase config (returns JS object)
     function getFirebaseConfig() {
-      console.log("JS: getFirebaseConfig called, returning:", __firebase_config); // Debug log
+      // If config not set during build, try to construct from environment or use defaults
+      if (!__firebase_config) {
+        // Check if environment variables are available (fallback for local development)
+        var apiKey = typeof DEMO_FIREBASE_API_KEY !== 'undefined' ? DEMO_FIREBASE_API_KEY : 'demo-api-key';
+        var authDomain = typeof DEMO_FIREBASE_AUTH_DOMAIN !== 'undefined' ? DEMO_FIREBASE_AUTH_DOMAIN : 'demo.firebaseapp.com';
+        var projectId = typeof DEMO_FIREBASE_PROJECT_ID !== 'undefined' ? DEMO_FIREBASE_PROJECT_ID : 'demo-project';
+        var storageBucket = typeof DEMO_FIREBASE_STORAGE_BUCKET !== 'undefined' ? DEMO_FIREBASE_STORAGE_BUCKET : 'demo.firebasestorage.app';
+        var messagingSenderId = typeof DEMO_FIREBASE_MESSAGING_SENDER_ID !== 'undefined' ? DEMO_FIREBASE_MESSAGING_SENDER_ID : '123456789';
+        var appId = typeof DEMO_FIREBASE_APP_ID !== 'undefined' ? DEMO_FIREBASE_APP_ID : '1:123456789:web:abcdef';
+        var measurementId = typeof DEMO_FIREBASE_MEASUREMENT_ID !== 'undefined' ? DEMO_FIREBASE_MEASUREMENT_ID : null;
+
+        __firebase_config = {
+          apiKey: apiKey,
+          authDomain: authDomain,
+          projectId: projectId,
+          storageBucket: storageBucket,
+          messagingSenderId: messagingSenderId,
+          appId: appId
+        };
+
+        if (measurementId) {
+          __firebase_config.measurementId = measurementId;
+        }
+      }
+
+      console.log("JS: getFirebaseConfig called, returning:", __firebase_config);
       return __firebase_config;
     }
   </script>
