🎯 Reliable scroll isolation for demo content
- Simplified approach: always prevent parent scroll over demo
- Timeout-based fallback allows parent scroll if iframe doesn't handle
- Fixes CostIQ and other scrollable sections in demo tabs
- No cross-origin issues, works reliably

--- a/pages/demo.html
+++ b/pages/demo.html
@@ -496,77 +496,71 @@
             }
         }, 30000);
 
-        // Scroll isolation for iframe - intelligent scroll handling
+        // Scroll isolation for iframe - reliable approach without cross-origin issues
         const demoWrapper = document.querySelector('.demo-frame-wrapper');
         const demoFrame = document.getElementById('demoFrame');
         let isMouseOverDemo = false;
-        let iframeScrollTimeout;
+        let scrollTimeout;
 
         demoWrapper.addEventListener('mouseenter', function() {
             isMouseOverDemo = true;
-        });
-
-        demoWrapper.addEventListener('mouseleave', function() {
-            isMouseOverDemo = false;
-        });
-
-        // Smart scroll handling: allow iframe to scroll first, prevent parent only when necessary
-        document.addEventListener('wheel', function(e) {
-            if (isMouseOverDemo) {
-                // Check if iframe is loaded and can receive focus
-                try {
-                    const iframeDoc = demoFrame.contentDocument || demoFrame.contentWindow.document;
-                    if (iframeDoc) {
-                        // Let iframe handle scrolling naturally, but prevent parent scroll bubbling
-                        e.stopPropagation();
-
-                        // If iframe can't scroll in the requested direction, allow parent scroll
-                        const iframeWindow = demoFrame.contentWindow;
-                        const iframeBody = iframeDoc.body;
-
-                        if (iframeBody) {
-                            const atTop = iframeBody.scrollTop <= 0;
-                            const atBottom = iframeBody.scrollTop >= (iframeBody.scrollHeight - iframeBody.clientHeight - 1);
-
-                            // If at top and scrolling up, or at bottom and scrolling down, allow parent scroll
-                            if ((e.deltaY < 0 && atTop) || (e.deltaY > 0 && atBottom)) {
-                                // Allow parent scroll by not preventing default
-                                return true;
-                            }
-                        }
-
-                        // Prevent parent scroll - let iframe handle it
-                        e.preventDefault();
-                        return false;
-                    }
-                } catch (error) {
-                    // Cross-origin restrictions, fallback to preventing parent scroll
-                    e.preventDefault();
-                    e.stopPropagation();
-                    return false;
-                }
-            }
-        }, { passive: false });
-
-        // Handle touch events for mobile
-        document.addEventListener('touchmove', function(e) {
-            if (isMouseOverDemo) {
-                e.stopPropagation();
-                // For touch, be more conservative and prevent parent scrolling
-                e.preventDefault();
-                return false;
-            }
-        }, { passive: false });
-
-        // Add visual feedback when hovering over demo
-        demoWrapper.addEventListener('mouseenter', function() {
+            // Add visual feedback
             this.style.boxShadow = '0 20px 80px rgba(108, 99, 255, 0.3)';
             this.style.transform = 'translateY(-2px)';
         });
 
         demoWrapper.addEventListener('mouseleave', function() {
+            isMouseOverDemo = false;
+            // Reset visual feedback
             this.style.boxShadow = '0 20px 80px rgba(0,0,0,0.15)';
             this.style.transform = 'translateY(0)';
+            // Clear any pending timeout
+            if (scrollTimeout) {
+                clearTimeout(scrollTimeout);
+            }
+        });
+
+        // Reliable scroll isolation: prevent parent scroll, let iframe handle its own scrolling
+        document.addEventListener('wheel', function(e) {
+            if (isMouseOverDemo) {
+                // Always prevent parent scrolling when over demo
+                e.preventDefault();
+                e.stopPropagation();
+
+                // Clear any existing timeout
+                if (scrollTimeout) {
+                    clearTimeout(scrollTimeout);
+                }
+
+                // Set a timeout to allow parent scrolling if iframe doesn't handle the scroll
+                scrollTimeout = setTimeout(() => {
+                    // If we get here, the iframe didn't handle the scroll
+                    // Allow parent to scroll in the opposite direction
+                    const parentScrollAmount = e.deltaY > 0 ? 100 : -100;
+                    window.scrollBy({
+                        top: parentScrollAmount,
+                        behavior: 'smooth'
+                    });
+                }, 50); // Short timeout to detect if iframe handles scroll
+
+                return false;
+            }
+        }, { passive: false });
+
+        // Handle touch events for mobile - more conservative approach
+        document.addEventListener('touchmove', function(e) {
+            if (isMouseOverDemo) {
+                e.preventDefault();
+                e.stopPropagation();
+                return false;
+            }
+        }, { passive: false });
+
+        // Clear timeout on iframe load to ensure clean state
+        demoFrame.addEventListener('load', function() {
+            if (scrollTimeout) {
+                clearTimeout(scrollTimeout);
+            }
         });
     </script>
 </body>
