✨ Clean up site copy - remove OTT wankery, make professional and SaaS-friendly

--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -85,11 +85,11 @@
         <div class="container">
             <span class="section-badge" data-aos="fade-up">Early Adoption</span>
             <h1 data-aos="fade-up">
-                This Could Be<br/>
-                <span class="gradient-text">Your Success Story</span>
+                Early Access<br/>
+                <span class="gradient-text">Partners</span>
             </h1>
             <p data-aos="fade-up" data-aos-delay="100">
-                VenueIQ is in early beta, and we're looking for founding partners who want to be part of something bigger. Help shape the future of restaurant intelligence.
+                We're building VenueIQ with input from real restaurant operators. Join our early access program.
             </p>
         </div>
     </section>
@@ -99,10 +99,10 @@
         <div class="container">
             <div class="text-center" style="max-width: 800px; margin: 0 auto 4rem;" data-aos="fade-up">
                 <h2 style="font-family: var(--font-heading); font-size: 2.5rem; font-weight: 800; margin-bottom: 1.5rem;">
-                    Why Join as a <span class="gradient-text">Founding Partner?</span>
+                    Why Join as an <span class="gradient-text">Early Access Partner?</span>
                 </h2>
                 <p style="font-size: 1.125rem; color: var(--text-secondary); line-height: 1.7;">
-                    Early adopters don't just get software—they get a say in how it's built. Your feedback directly shapes features, workflows, and the product roadmap.
+                    Early access partners get priority support and can influence future development. Your feedback helps shape the platform.
                 </p>
             </div>
 
@@ -113,9 +113,9 @@
                             <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">Founding Partner Pricing</h3>
+                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">Early Access Pricing</h3>
                     <p style="color: var(--text-secondary); line-height: 1.6;">
-                        Lock in special lifetime pricing as an early supporter. Your rate stays frozen even as the platform grows and adds features.
+                        Get discounted rates as an early adopter. Pricing is customized based on your venue's needs.
                     </p>
                 </div>
 
@@ -125,9 +125,9 @@
                             <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">Direct Input on Features</h3>
+                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">Influence Development</h3>
                     <p style="color: var(--text-secondary); line-height: 1.6;">
-                        Tell us what you need. We're actively building based on real operator feedback—your pain points become our priorities.
+                        Your feedback helps prioritize features and improve the platform for all users.
                     </p>
                 </div>
 
@@ -140,9 +140,9 @@
                             <path d="M16 3.13a4 4 0 0 1 0 7.75" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">White-Glove Onboarding</h3>
+                    <h3 style="font-family: var(--font-heading); font-size: 1.5rem; margin-bottom: 0.75rem;">Setup Support</h3>
                     <p style="color: var(--text-secondary); line-height: 1.6;">
-                        Personal setup assistance, training sessions, and ongoing support as you integrate VenueIQ into your operations.
+                        Get help with data import and initial configuration to ensure a smooth onboarding experience.
                     </p>
                 </div>
 
