--- a/pages/demo.html
+++ b/pages/demo.html
@@ -329,9 +329,7 @@
     <div class="demo-intro">
         <h2>Interactive Demo</h2>
         <p>
-            Explore VenueIQ with realistic restaurant data from Demo Pizzeria. 
-            Click through all features, view reports, and see how the platform works. 
-            No signup required.
+            Experience VenueIQ with sample restaurant data. Explore all features and see how the platform works. No signup required.
         </p>
     </div>
 
@@ -369,37 +367,36 @@
 
     <!-- What to Explore -->
     <div class="features-grid">
-        <div class="feature-card">
+            <div class="feature-card">
             <div class="feature-icon">💰</div>
             <h4>CostIQ</h4>
-            <p>Browse recipes, view ingredient costs, and analyze profit margins</p>
+            <p>Recipe costing and ingredient tracking with real-time updates</p>
         </div>
         <div class="feature-card">
             <div class="feature-icon">📊</div>
             <h4>RevenueIQ</h4>
-            <p>Check sales analytics, trends, and performance metrics</p>
+            <p>Sales analytics and performance tracking</p>
         </div>
         <div class="feature-card">
             <div class="feature-icon">📦</div>
-            <h4>StockIQ</h4>
-            <p>Monitor inventory levels, suppliers, and purchase orders</p>
+            <h4>StockIQ (Coming Soon)</h4>
+            <p>Inventory management and supplier tracking</p>
         </div>
         <div class="feature-card">
             <div class="feature-icon">🍕</div>
             <h4>MenuIQ</h4>
-            <p>Analyze menu performance with BCG matrix and optimization</p>
+            <p>Menu performance analysis and optimization</p>
         </div>
     </div>
 
     <!-- Call to Action -->
     <div class="demo-cta">
-        <h3>Ready to optimize your venue?</h3>
+        <h3>Ready to get started?</h3>
         <p>
-            Create your free account and connect your real data. 
-            Get insights in minutes, not hours.
+            Connect your real data and start making better business decisions.
         </p>
         <a href="../index.html" class="cta-btn">
-            Get Started Free →
+            Learn More →
         </a>
     </div>
 
