--- a/pages/features.html
+++ b/pages/features.html
@@ -85,11 +85,11 @@
         <div class="container">
             <span class="section-badge" data-aos="fade-up">Platform Features</span>
             <h1 data-aos="fade-up">
-                Everything You Need to<br/>
-                <span class="gradient-text">Understand Your Numbers</span>
+                Platform<br/>
+                <span class="gradient-text">Features</span>
             </h1>
             <p data-aos="fade-up" data-aos-delay="100">
-                Four integrated modules working together to give you complete visibility into your restaurant operations.
+                Four integrated modules that work together to provide complete visibility into your restaurant operations.
             </p>
         </div>
     </section>
@@ -104,37 +104,37 @@
                         CostIQ<br/><span class="gradient-text">Recipe Costing Intelligence</span>
                     </h2>
                     <p style="font-size: 1.125rem; color: var(--text-secondary); line-height: 1.8; margin-bottom: 2rem;">
-                        Stop guessing what your dishes actually cost. CostIQ gives you penny-accurate recipe costing with real-time ingredient tracking and automatic updates when supplier prices change.
+                        Track recipe costs in real-time with automatic updates when ingredient prices change. Get accurate cost data for better pricing decisions.
                     </p>
                     <ul class="feature-list" style="list-style: none; padding: 0;">
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Live Recipe Costing</strong> - Real-time cost calculations as ingredient prices fluctuate
+                                <strong>Real-Time Costing</strong> - Automatic cost calculations that update with ingredient price changes
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Cost Variance Tracking</strong> - Historical snapshots show exactly when and how costs changed
+                                <strong>Cost History Tracking</strong> - Historical snapshots show how costs have changed over time
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>In-App Recipe Builder</strong> - Drag-and-drop interface with instant cost feedback
+                                <strong>Recipe Management</strong> - Easy-to-use interface for building and editing recipes
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>BCG Matrix Analysis</strong> - Identify your Stars and Dogs for better menu decisions
+                                <strong>Menu Performance Analysis</strong> - BCG matrix analysis to identify high and low performing items
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Profitability Tracking</strong> - See gross profit per dish, not just cost percentages
+                                <strong>Profit Margin Tracking</strong> - See profit margins per dish alongside cost percentages
                             </div>
                         </li>
                     </ul>
@@ -167,37 +167,37 @@
                         RevenueIQ<br/><span class="gradient-text">Sales Analytics</span>
                     </h2>
                     <p style="font-size: 1.125rem; color: var(--text-secondary); line-height: 1.8; margin-bottom: 2rem;">
-                        Know what's selling, when it's selling, and why. RevenueIQ turns your POS data into actionable insights about menu performance and customer preferences.
+                        Analyze sales performance and trends. Import data from your POS system to understand what's working and identify opportunities.
                     </p>
                     <ul class="feature-list" style="list-style: none; padding: 0;">
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Revenue Trend Analysis</strong> - Daily, weekly, monthly patterns at a glance
+                                <strong>Sales Trend Analysis</strong> - Daily, weekly, and monthly performance patterns
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Best Seller Identification</strong> - Automatic ranking by volume and profit
+                                <strong>Item Performance Ranking</strong> - Automatic ranking by volume and profitability
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Category Performance</strong> - See which menu sections drive revenue
+                                <strong>Category Analysis</strong> - Performance breakdown by menu sections
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>CSV Data Import</strong> - Works with any POS system via export files
+                                <strong>Data Import</strong> - Works with CSV exports from most POS systems
                             </div>
                         </li>
                         <li style="display: flex; gap: 1rem; margin-bottom: 1rem;">
                             <span class="check-icon">✓</span>
                             <div>
-                                <strong>Period Comparisons</strong> - Compare this week vs last week, month over month
+                                <strong>Time Period Comparisons</strong> - Compare performance across different time periods
                             </div>
                         </li>
                     </ul>
@@ -234,7 +234,7 @@
                         </svg>
                     </div>
                     <h3>StockIQ</h3>
-                    <p>Intelligent inventory management. Never run out of critical ingredients again.</p>
+                    <p>Inventory management with automated tracking and supplier management.</p>
                     <ul class="feature-list">
                         <li><span class="check-icon">✓</span> Real-time stock levels</li>
                         <li><span class="check-icon">✓</span> Low stock alerts</li>
@@ -252,7 +252,7 @@
                         </svg>
                     </div>
                     <h3>MenuIQ</h3>
-                    <p>Menu engineering and pricing optimization. Design menus that maximize profit.</p>
+                    <p>Menu performance analysis and optimization tools.</p>
                     <ul class="feature-list">
                         <li><span class="check-icon">✓</span> BCG matrix (Stars/Dogs)</li>
                         <li><span class="check-icon">✓</span> Margin analysis</li>
@@ -270,15 +270,15 @@
         <div class="container">
             <div class="cta-content" data-aos="fade-up">
                 <span class="section-badge badge-light">Ready to Try?</span>
-                <h2 class="cta-title">Experience All Features<br/><span class="gradient-text-light">With Our Live Demo</span></h2>
-                <p class="cta-subtitle">No signup required. Full access to all 4 modules with real sample data.</p>
+                <h2 class="cta-title">Ready to Get Started?<br/><span class="gradient-text-light">Try the Demo</span></h2>
+                <p class="cta-subtitle">Experience all features with realistic sample data. No signup required.</p>
                 
                 <div class="cta-buttons">
                     <a href="demo.html" class="btn btn-primary btn-large" data-track="cta_features_demo">
-                        🚀 Try Interactive Demo
+                        Try Interactive Demo
                     </a>
                     <a href="contact.html" class="btn btn-outline-white btn-large" data-track="cta_features_contact">
-                        💬 Contact Us
+                        Contact Us
                     </a>
                 </div>
             </div>
