💰 Update demo data:  annual revenue target with ,800/month in costing losses across 4 items for BCG matrix

--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -291,7 +291,7 @@
 
                 <div class="footer-section">
                     <h4>Support</h4>
-                    <a href="mailto:support@venueiq.app">Contact Support</a>
+                    <a href="mailto:caleb@venueiq.pro">Contact Support</a>
                     <a href="help.html">Documentation</a>
                     <a href="faq.html">Common Questions</a>
                 </div>
