--- a/pages/faq.html
+++ b/pages/faq.html
@@ -308,7 +308,7 @@
                         <div class="faq-icon">+</div>
                     </div>
                     <div class="faq-answer">
-                        You can try the full live demo immediately - no signup required. Demo credentials are: <strong>demo@venueiq.app</strong> / <strong>demo123demo</strong>. For actual use with your venue's data, we offer flexible onboarding for early access partners. Contact us to discuss your specific situation.
+                        You can try the full live demo immediately - no signup required. Demo credentials are: <strong>caleb@venueiq.pro</strong> / <strong>demo123demo</strong>. For actual use with your venue's data, we offer flexible onboarding for early access partners. Contact us to discuss your specific situation.
                     </div>
                 </div>
                 
@@ -525,7 +525,7 @@
 
                 <div class="footer-section">
                     <h4>Support</h4>
-                    <a href="mailto:support@venueiq.app">Contact Support</a>
+                    <a href="mailto:caleb@venueiq.pro">Contact Support</a>
                     <a href="help.html">Documentation</a>
                     <a href="faq.html">Common Questions</a>
                 </div>
