--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
                 <div class="footer-section">
                     <h4>Support</h4>
-                    <a href="mailto:support@venueiq.app">Contact Support</a>
+                    <a href="mailto:caleb@venueiq.pro">Contact Support</a>
                     <a href="pages/help.html">Documentation</a>
                     <a href="pages/faq.html">Common Questions</a>
                 </div>
