--- a/pages/about.html
+++ b/pages/about.html
@@ -259,7 +259,7 @@
 
                 <div class="footer-section">
                     <h4>Support</h4>
-                    <a href="mailto:support@venueiq.app">Contact Support</a>
+                    <a href="mailto:caleb@venueiq.pro">Contact Support</a>
                     <a href="contact.html">FAQ</a>
                 </div>
             </div>
