--- a/pages/contact.html
+++ b/pages/contact.html
@@ -117,8 +117,8 @@
                             </div>
                             <div>
                                 <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Email</h3>
-                                <a href="mailto:contact@venueiq.app" style="color: var(--primary); font-weight: 600; text-decoration: none;">
-                                    contact@venueiq.app
+                                <a href="mailto:caleb@venueiq.pro" style="color: var(--primary); font-weight: 600; text-decoration: none;">
+                                    caleb@venueiq.pro
                                 </a>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
 
                 <div class="footer-section">
                     <h4>Support</h4>
-                    <a href="mailto:support@venueiq.app">Contact Support</a>
+                    <a href="mailto:caleb@venueiq.pro">Contact Support</a>
                     <a href="contact.html">FAQ</a>
                 </div>
             </div>
